# WasmEdge

./: CMakeLists.txt
.devcontainer/: Dockerfile
.github/: dependabot.yml
.github/workflows/: IWYU_scan.yml  bindings-java.yml  build-extensions.yml  build.yml  build_for_openwrt.yml  build_for_riscv.yml  codeql-analysis.yml  docker.yml  labeler.yml  mdbook.yml  misc-linters.yml  release.yml  reusable-build-extensions-on-manylinux.yml  reusable-build-extensions.yml  reusable-build-on-alpine-static.yml  reusable-build-on-android.yml  reusable-build-on-debian-static.yml  reusable-build-on-fedora.yml  reusable-build-on-macos.yml  reusable-build-on-manylinux.yml  reusable-build-on-ubuntu.yml  reusable-build-on-windows-msvc.yml  reusable-build-on-windows.yml  reusable-call-linter.yml  reusable-create-source-tarball.yml  static-code-analysis.yml  test-install-script.yml  test-python-install-script.yml  wasi-testsuite.yml  winget-submit.yml
include/api/wasmedge/: wasmedge.h
include/executor/: executor.h
include/runtime/instance/: module.h
lib/api/: wasmedge.cpp
lib/executor/: executor.cpp
lib/executor/instantiate/: component.cpp
lib/validator/: formchecker.cpp
lib/vm/: vm.cpp
plugins/: CMakeLists.txt
plugins/wasi_http/: CMakeLists.txt  env.cpp  env.h  func.cpp  func.h
plugins/wasi_nn/: ggml.cpp  ggml.h
